--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.css" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
-    />
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"/>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -358,13 +357,116 @@
               обязателен.
             </p>
             <a
-              class="btn btn-primary rounded-pill p-3 ms-3 px-5 btn-blue"
+              class="btn rounded-pill p-3 ms-3 px-5 btn-blue btn-blue-static"
               href=""
               >Попасть на коучинг</a
             >
           </div>
         </div>
       </div>
+    </section>
+
+    <section class="learning py-5">
+      <div class="container">
+        <h2 class="fw-bold text-center mb-5">Ваша программа обучения</h2>
+        <div class="accordion accordion-flush my-4" id="accordionFlushExample">
+          <div class="accordion-item p-3">
+            <span class="small me-3 px-3">Блок #1</span>
+            <span class="text-warning small">3 занятия</span>
+            <h2 class="accordion-header" id="flush-headingOne">
+              <button
+                class="accordion-button  fw-bold"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#flush-collapseOne"
+                aria-expanded="false"
+                aria-controls="flush-collapseOne"
+              >
+                Введение
+              </button>
+            </h2>
+            <div
+              id="flush-collapseOne"
+              class="accordion-collapse collapse"
+              aria-labelledby="flush-headingOne"
+              data-bs-parent="#accordionFlushExample"
+            >
+              <div class="accordion-body">
+                <ul>
+                  <li>Знакомство с коучингом и профессией</li>
+                  <li>Знакомство с HTML</li>
+                  <li>Знакомство с CSS</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="accordion accordion-flush my-4" id="accordionFlushExample">
+          <div class="accordion-item p-3">
+            <span class="small me-3 px-3">Блок #1</span>  
+            <span class="text-warning small">3 занятия</span>
+            <h2 class="accordion-header" id="flush-headingOne">
+              <button
+                class="accordion-button fw-bold"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#flush-collapseTwo"
+                aria-expanded="false"
+                aria-controls="flush-collapseOne"
+              >
+                Погружение
+              </button>
+            </h2>
+            <div
+              id="flush-collapseTwo"
+              class="accordion-collapse collapse"
+              aria-labelledby="flush-headingOne"
+              data-bs-parent="#accordionFlushExample2"
+            >
+              <div class="accordion-body">
+                <ul>
+                  <li>Знакомство с коучингом и профессией</li>
+                  <li>Знакомство с HTML</li>
+                  <li>Знакомство с CSS</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="accordion accordion-flush my-4" id="accordionFlushExample">
+          <div class="accordion-item p-3">
+            <span class="small me-3 px-3">Блок #1</span>
+            <span class="text-warning small">3 занятия</span>
+            <h2 class="accordion-header" id="flush-headingOne">
+              <button
+                class="accordion-button fw-bold"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#flush-collapseThree"
+                aria-expanded="false"
+                aria-controls="flush-collapseOne"
+              >
+                Всё покажет практика
+              </button>
+            </h2>
+            <div
+              id="flush-collapseThree"
+              class="accordion-collapse collapse"
+              aria-labelledby="flush-headingOne"
+              data-bs-parent="#accordionFlushExample3"
+            >
+              <div class="accordion-body">
+                <ul>
+                  <li>Знакомство с коучингом и профессией</li>
+                  <li>Знакомство с HTML</li>
+                  <li>Знакомство с CSS</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      
     </section>
     <script src="bootstrap-5.1.3-dist/js/bootstrap.js"></script>
   </body>
